--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela2</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main>
@@ -22,7 +22,7 @@
             <img id="olho" src="img/esconder.svg" alt="">
 
             <label id="label">CEP:</label>
-            <label id="label">Numero:</label><br>
+            <label id="label_numero">Numero:</label><br>
             <input id="input_cep" placeholder="ex: 12345-678" type="text">
             <input id="input_numero" placeholder="ex: 100" type="text">
             <label id="label">Rua:</label>
